[project]
name = "limelight"
version = "2024.12.0-alpha"
description = "Flask shiniest stars"
readme = "README.md"
requires-python = ">=3.11"
license = { "text" = "MIT" }
authors = [{ "name" = "Mario Hernandez", "email" = "mariofix@proton.me" }]

dependencies = [
    "flask-migrate>=4.0.7",
    "flask>=3.1.0",
    "flask-http-middleware>=0.4.4",
    "python-dotenv>=1.0.1",
    "flask-babel>=4.0.0",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.19",
    "flask-sitemap>=0.4.0",
    "authlib>=1.3.2",
    "requests>=2.32.3",
    "celery[redis]>=5.4.0",
    "sqlalchemy-mixins>=2.0.5",
    "python-github>=0.1.0.dev0",
    "python-gitlab>=5.1.0",
    "flask-admin>=1.6.1",
    "flask-security>=5.5.2",
    "flask-debugtoolbar>=0.16.0",
    "trove-classifiers>=2024.10.21.16",
]

[dependency-groups]
dev = ["black>=24.10.0", "pre-commit>=4.0.1", "rich>=13.9.4"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["limelight"]

[tool.autopep8]
max_line_length = 119
ignore = ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test*.py"]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 5
py_version = 311
