[project]
name = "limelight"
version = "2025.2"
description = "Flask shiniest stars"
authors = [{ name = "Mario Hernandez", email = "mariofix@proton.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask-migrate>=4.0.7",
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "flask-babel>=4.0.0",
    "python-multipart>=0.0.19",
    "requests>=2.32.3",
    "flask-admin[sqlalchemy-with-utils,translation]>=2.0.0a3",
    "flask-debugtoolbar>=0.16.0",
    "trove-classifiers>=2024.10.21.16",
    "flask-mailman>=1.1.1",
    "flask-security[babel,common,fsqla]>=5.5.2",
    "setuptools>=75.6.0",
    "flask-limiter>=3.9.2",
    "packaging (>=24.2,<25.0)",
    "pendulum>=3.0.0",
    "flask-sitemapper>=1.8.1",
    "jinja2-humanize-extension (>=0.4.0,<0.5.0)",
    "pre-commit>=4.0.1",
    "black>=24.10.0",
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 119
ignore = ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 119
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test*.py"]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 5
py_version = 310
